more tab alignment fixes

--- a/src/Mint-X/theme/Mint-X/gtk-3.0/gtk-widgets.css
+++ b/src/Mint-X/theme/Mint-X/gtk-3.0/gtk-widgets.css
@@ -1321,9 +1321,15 @@ notebook.frame > header {
     margin: -1px;
 }
 
-notebook.frame > header > tabs {
+notebook.frame > header.top > tabs {
     margin: 0px;
     margin-right: -2px;
+}
+
+notebook.frame > header.top:dir(rtl) {
+    margin-bottom: 0;
+    padding-left: 0px;
+    padding-right: 2px;
 }
 
 notebook.frame > header.top {
@@ -1339,10 +1345,9 @@ notebook.frame > header.bottom {
 }
 
 notebook.frame > header.left {
-    margin-right: 0px;
+    margin-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    padding-right: 2px;
 }
 
 notebook.frame > header.right {
